--- a/doctores/templates/login.html
+++ b/doctores/templates/login.html
@@ -16,7 +16,7 @@
         {%if mensajes %}
             {% for msj in mensajes %}
     
-            <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+            <div class="alert alert-success fade show text-center" role="alert">
                 <strong>{{msj}}</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
