--- a/doctores/templates/plantillaAdmin.html
+++ b/doctores/templates/plantillaAdmin.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Centro Médico</a>
+          <a class="navbar-brand" href="/inicioAdmin">Centro Médico</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -26,22 +26,22 @@
                 <a class="nav-link active" aria-current="page" href="inicio">Inicio</a>
               </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="#">Registro Pacientes</a>
+                <a class="nav-link" href="/registroPacienteAdmin">Registro Pacientes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Exploración</a>
+                <a class="nav-link" href="/exploracionAdmin">Exploración</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Diagnóstico</a>
               </li> -->
               
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Médicos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Registro Médico</a></li>
-                  <li><a class="dropdown-item" href="#">Consulta Médico</a></li>
+                  <li><a class="dropdown-item" href="/registroMedico">Registro Médico</a></li>
+                  <li><a class="dropdown-item" href="/consultaMedico">Consulta Médico</a></li>
                 </ul>
               </li>
             </ul>
